--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=CafeControlSystem
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cafe_db
+spring.datasource.username=root
+spring.datasource.password=rlaalstn3077!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.redis.host=localhost
+spring.redis.port=6379
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+file.upload-dir=src/main/resources/static/images
+logging.level.org.hibernate=DEBUG
