--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CafeControlSystem
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cafe_db
+spring.datasource.url=jdbc:mysql://localhost:3306/cafe_db?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=rlaalstn3077!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,6 +9,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.redis.host=localhost
 spring.redis.port=6379
