feat: implement sale saving logic with related entity

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 .gradle
 **/application.properties
-**/SaleController
+**/SaleController.java
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
